[project]
name = "day1-assingments-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control,mujoco,other]>=1.2.3",
    "matplotlib>=3.10.8",
    "pyvirtualdisplay>=3.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
